--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -990,6 +990,11 @@ section,
   fill: #f3268c;
 }
 
+.object-fit-image {
+  max-width: 100%; /* Ensures the image does not exceed container's width */
+  height: auto;
+}
+
 /*--------------------------------------------------------------
 # Testimonials Section
 --------------------------------------------------------------*/
@@ -1004,7 +1009,7 @@ section,
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  border-radius: 50%;
+  border-radius: 0%;
   border: 4px solid var(--background-color);
   margin: 0 auto;
 }
